@@ -6,6 +6,7 @@
 
 extern void _GMP_init(void);
 extern void _GMP_destroy(void);
+extern void _GMP_memfree(void);
 
 extern int  primality_pretest(mpz_t n);
 
