@@ -33,6 +33,9 @@ Revision history for Perl module Math::Prime::Util::GMP
     - Constants Euler, Pi, and Log2 are cached, just like Pari/GP, MPFR, etc.
       All three are used quite a bit internally.
 
+    - Calling Pi or Euler in void context just calculates (and caches) the
+      value.  This saves the expensive string conversion.
+
 
 0.48 2017-10-05
 
